appId: com.saucelabs.mydemoapp.android
---

- tapOn:
    id: "nameET"
- inputText: ${USERNAME}

- tapOn:
    id: "passwordET"
- inputText: ${PASSWORD}

- tapOn:
    text: "Login"
    index: 1
