appId: com.saucelabs.mydemoapp.android
---

- scrollUntilVisible:
    element: "View menu"

- tapOn: "View menu"

- scrollUntilVisible:
    element: "Log Out"

- tapOn: "Log Out"

- tapOn: "LOGOUT"

