appId: com.saucelabs.mydemoapp.android
---
- launchApp:
    clearState: true

- scrollUntilVisible:
    element: "View menu"

- tapOn: "View menu"

- scrollUntilVisible:
    element: "Log In"

- tapOn: "Log In"
