appId: com.saucelabs.mydemoapp.android
---
- tapOn:
    id: "cardNumberET"
- inputText: ${CARD_NUMBER}

- tapOn:
    id: "expirationDateET"
- inputText: ${EXPIRY_DATE}

- tapOn:
    id: "securityCodeET"
- inputText: ${CVV}
